apps/argocd/overlays/core-infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-argocd-ingress
  namespace: argocd
  labels:
    external-dns.invertedorigin.com/enabled: "true"
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
    external-dns.kubernetes.io/target: ingress.home.arpa
    external-dns.kubernetes.io/ttl: "60"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - argocd.invertedorigin.com
    secretName: argocd-tls-domain
  rules:
  - host: argocd.invertedorigin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
